projects/invoice-hyperledger-fabric/test-network/kubernetes/ca-orderer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
      -f docker-compose-ca.yaml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ca-orderer
  name: ca-orderer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ca-orderer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
          -f docker-compose-ca.yaml convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/invoicehyperlederfabric_test: "true"
        io.kompose.service: ca-orderer
    spec:
      containers:
      - args:
        - sh
        - -c
        - fabric-ca-server start -b admin:adminpw -d
        image: hyperledger/fabric-ca:latest
        imagePullPolicy: ""
        name: ca-orderer
        ports:
        - containerPort: 9054
        resources: {}
        volumeMounts:
        - mountPath: /etc/hyperledger/fabric-ca-server
          name: ca-orderer-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: ca-orderer-claim0
        persistentVolumeClaim:
          claimName: ca-orderer-claim0
status: {}
