projects/invoice-hyperledger-fabric/test-network/kubernetes/couchdb1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
      -f docker-compose-ca.yaml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: couchdb1
  name: couchdb1
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: couchdb1
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
          -f docker-compose-ca.yaml convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/invoicehyperlederfabric_test: "true"
        io.kompose.service: couchdb1
    spec:
      containers:
      - env:
        - name: COUCHDB_PASSWORD
          value: adminpw
        - name: COUCHDB_USER
          value: admin
        image: couchdb:3.1
        imagePullPolicy: ""
        name: couchdb1
        ports:
        - containerPort: 5984
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
