projects/invoice-hyperledger-fabric/test-network/kubernetes/orderer-example-com-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
      -f docker-compose-ca.yaml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: orderer-example-com
  name: orderer-example-com
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: orderer-example-com
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
          -f docker-compose-ca.yaml convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/invoicehyperlederfabric_test: "true"
        io.kompose.service: orderer-example-com
    spec:
      containers:
      - args:
        - orderer
        image: hyperledger/fabric-orderer:latest
        imagePullPolicy: ""
        name: orderer.example.com
        ports:
        - containerPort: 7050
        resources: {}
        volumeMounts:
        - mountPath: /var/hyperledger/orderer/orderer.genesis.block
          name: orderer-example-com-claim0
        - mountPath: /var/hyperledger/orderer/msp
          name: orderer-example-com-claim1
        - mountPath: /var/hyperledger/orderer/tls
          name: orderer-example-com-claim2
        - mountPath: /var/hyperledger/production/orderer
          name: orderer.example.com
        workingDir: /opt/gopath/src/github.com/hyperledger/fabric
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: orderer-example-com-claim0
        persistentVolumeClaim:
          claimName: orderer-example-com-claim0
      - name: orderer-example-com-claim1
        persistentVolumeClaim:
          claimName: orderer-example-com-claim1
      - name: orderer-example-com-claim2
        persistentVolumeClaim:
          claimName: orderer-example-com-claim2
      - name: orderer.example.com
        persistentVolumeClaim:
          claimName: orderer.example.com
status: {}
