projects/invoice-hyperledger-fabric/test-network/kubernetes/peer0-org2-example-com-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
      -f docker-compose-ca.yaml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: peer0-org2-example-com
  name: peer0-org2-example-com
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: peer0-org2-example-com
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
          -f docker-compose-ca.yaml convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/invoicehyperlederfabric_test: "true"
        io.kompose.service: peer0-org2-example-com
    spec:
      containers:
      - args:
        - peer
        - node
        - start
        image: hyperledger/fabric-peer:latest
        imagePullPolicy: ""
        name: peer0.org2.example.com
        ports:
        - containerPort: 9051
        resources: {}
        volumeMounts:
        - mountPath: /host/var/run/
          name: peer0-org2-example-com-claim0
        - mountPath: /etc/hyperledger/fabric/msp
          name: peer0-org2-example-com-claim1
        - mountPath: /etc/hyperledger/fabric/tls
          name: peer0-org2-example-com-claim2
        - mountPath: /var/hyperledger/production
          name: peer0.org2.example.com
        workingDir: /opt/gopath/src/github.com/hyperledger/fabric/peer
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: peer0-org2-example-com-claim0
        persistentVolumeClaim:
          claimName: peer0-org2-example-com-claim0
      - name: peer0-org2-example-com-claim1
        persistentVolumeClaim:
          claimName: peer0-org2-example-com-claim1
      - name: peer0-org2-example-com-claim2
        persistentVolumeClaim:
          claimName: peer0-org2-example-com-claim2
      - name: peer0.org2.example.com
        persistentVolumeClaim:
          claimName: peer0.org2.example.com
status: {}
