projects/invoice-hyperledger-fabric/test-network/kubernetes/ca-org1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
      -f docker-compose-ca.yaml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ca-org1
  name: ca-org1
spec:
  ports:
  - name: "7054"
    port: 7054
    targetPort: 7054
  selector:
    io.kompose.service: ca-org1
status:
  loadBalancer: {}
