projects/invoice-hyperledger-fabric/test-network/kubernetes/ca-org2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
      -f docker-compose-ca.yaml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ca-org2
  name: ca-org2
spec:
  ports:
  - name: "8054"
    port: 8054
    targetPort: 8054
  selector:
    io.kompose.service: ca-org2
status:
  loadBalancer: {}
