projects/invoice-hyperledger-fabric/test-network/kubernetes/couchdb1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
      -f docker-compose-ca.yaml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: couchdb1
  name: couchdb1
spec:
  ports:
  - name: "7984"
    port: 7984
    targetPort: 5984
  selector:
    io.kompose.service: couchdb1
status:
  loadBalancer: {}
