projects/invoice-hyperledger-fabric/test-network/kubernetes/orderer-example-com-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose-test-net.yaml -f docker-compose-couch.yaml
      -f docker-compose-ca.yaml convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: orderer-example-com
  name: orderer-example-com
spec:
  ports:
  - name: "7050"
    port: 7050
    targetPort: 7050
  selector:
    io.kompose.service: orderer-example-com
status:
  loadBalancer: {}
