projects/invoice-hyperledger-fabric/test-network/kubernetes/invoicehyperlederfabric_test-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: invoicehyperlederfabric_test
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/invoicehyperlederfabric_test: "true"
  podSelector:
    matchLabels:
      io.kompose.network/invoicehyperlederfabric_test: "true"
